My logo at the top in tablet viewing mode was not centered correctly so I fixed it

--- a/css/index.css
+++ b/css/index.css
@@ -75,6 +75,10 @@ header {
     display: flex;
 }
 
+header .logo {
+    margin: 28px 0 0 91px;
+}
+
 header nav {
     margin-top: 40px; 
     width: 610px;
@@ -90,10 +94,6 @@ header nav a {
 header nav a:hover {
     text-decoration: underline;
     color: black;
-}
-
-header .logo {
-    margin: 28px 0 0 91px;
 }
 
 /* Call To Action (CTA) Styles */
@@ -136,7 +136,7 @@ header .logo {
    border-top: 2px solid black; 
    border-bottom: 2px solid black;
    margin: 75px 0 35px 0;
-   padding: 35px 0;
+   padding: 30px 0;
    font-size: 16px;
    line-height: 18px;
 }
@@ -185,14 +185,16 @@ footer {
         padding: 0 30px;
     }
 
-    .logo {
-        /*
+   header .logo {
+        margin: 0;
+    }
+    
+    .logo-container {
         display: flex;
-        flex-direction: column;
-        */
+        justify-content: center;
+        margin: 0 auto;
         order: -1;
-        display: block;
-        margin: 30px auto 0;
+        padding-top: 15px;
     }
 
     .cta {
@@ -206,26 +208,6 @@ footer {
     .planet {
         display: none;
     }
-
-    /*
-    .text-content {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-    
-    .middle-img {
-        width: 100%;
-    }
-
-    .main-content {
-      flex-direction: column;
-    }
-
-    .main-content section {
-      margin: 20px 5%;
-      width: 90%;
-    }
-    */
 
     /*.main-content*/
 
@@ -256,16 +238,12 @@ footer {
     header nav {
         display: flex;
         flex-direction: column;
-        /* align-items: center; */
         margin: 0;
         padding: 0;
         width: 100%;
-        /* align-items: center; */
     }
 
     header nav a {
-        /*border: 1px solid green;*/
-        /* align-items: center; */
         width: 100%;
         display: block;
         text-align: center;
@@ -292,13 +270,13 @@ footer {
 
     .top-content {
         flex-direction: column;
-        margin: 20px 5%;
+        margin: 10px 5%;
         width: 90%;
     }
 
     .bottom-content {
         flex-direction: column;
-        margin: 20px 5%;
+        margin: 10px 5%;
         width: 90%;
     }
 
